Updated styles to use css src() and fix the background cutting off early when scrolling

--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -7,6 +7,8 @@
 .container {
   display: block;
   height: 100%;
+  width: 100%;
+  background: url('./stardust.png') repeat;
 }
 
 * {
@@ -17,7 +19,8 @@ html,
 body,
 body > div {
   display: flex;
-  flex-direction: column;
-  height: 100%;
+  flex-direction: row;
+  min-height: 100%;
   width: 100%;
+  overflow-y: hidden;
 }
